--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "dependencies": {
+    "ahooks": "^3.7.8",
+    "axios": "^1.5.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
