--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -7,7 +7,7 @@ on:
     branches: ['main']
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 16.x
       - name: Test
-        run: |
-          yarn
-          yarn test
+        uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          package-manager: yarn
+          test-script: yarn test
