chore: update test types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
       "x-star-query/*": ["src/*", "*"]
     }
   },
-  "include": [".dumirc.ts", "src/**/*"]
+  "include": [".dumirc.ts", "src/**/*", "test/**/*"]
 }
