--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     ]
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.1",
     "ahooks": "^3.7.8",
     "axios": "^1.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-typescript": "^7.23.2",
+    "@babel/core": "^7.24.1",
+    "@babel/preset-env": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@jest/globals": "^29.7.0",
